[project]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = "Fetch PubMed research papers and filter them"
authors = [
    {name = "pavankumar", email = "pavankumarbonu11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "requests>=2.31.0,<3.0.0",
    "pandas>=2.1.0,<3.0.0",
    "argparse>=1.4.0,<2.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
